second enc po